--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /SequenceAlgorithm/bin/Debug/netcoreapp3.1
 /.vs/TDD_WorkFlow/config
 /.vs/TDD_WorkFlow/v16/TestStore/0
+/TestProject_SequenceTracking/obj/TestProject_SequenceTracking.csproj.nuget.dgspec.json
