--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /.vs/TDD_WorkFlow/config
 /.vs/TDD_WorkFlow/v16/TestStore/0
 /TestProject_SequenceTracking/obj/TestProject_SequenceTracking.csproj.nuget.dgspec.json
+/SequenceAlgorithm/obj/SequenceAlgorithm.csproj.nuget.dgspec.json
+/SequenceAlgorithm/obj/project.assets.json
+/TestProject_SequenceTracking/TestProject_SequenceTracking.csproj.user
