--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -26,14 +26,13 @@ jobs:
         dotnet-version: 3.1.101
 
     - name: Run tests and collect coverage
-      
+      run: dotnet test --collect:"XPlat Code Coverage"
 
     - name: Install coverage report generator
       run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
     - name: Make coverage report
-      run: reportgenerator "-reports:TypewiseAlert.Test\TestResults\*\*.xml" "-targetdir:coverage"
-    
+     
     - name: Create coverage artifact
       uses: actions/upload-artifact@v2
       with:
