--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /SequenceAlgorithm/obj/SequenceAlgorithm.csproj.nuget.dgspec.json
 /SequenceAlgorithm/obj/project.assets.json
 /TestProject_SequenceTracking/TestProject_SequenceTracking.csproj.user
+/SequenceAlgorithm/obj/Debug/netcoreapp3.1/SequenceAlgorithm.csprojAssemblyReference.cache
